loan service refactor